--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 </head>
 <body>
 
-<div class="content">
+<div class="all-content home">
 
-    <a href="effects.html"><h1>empatia</h1></a>
-    <div class="home">
-        <img src="img/video-hero-finale.gif" alt="pilule">
+    <a href="why.html"><h1>empatia</h1></a>
+    <div class="content">
+        <!--<img src="img/video-hero-finale.gif" alt="pilule">-->
         <h2>Au delà de vos écrans...</h2>
     </div>
 
