--- a/why.html
+++ b/why.html
@@ -7,36 +7,23 @@
 </head>
 <body>
 
-<div class="all-content composants">
+<div class="all-content why">
 
-    <h1>empatia</h1>
+    <a href="effects.html"><h1>empatia</h1></a>
 
     <div class="content">
         <h4>Changez vos maux en mots</h4>
-        <h2>Composants</h2>
-        <p>Mirorfeel vous aide  trouver le parfait équilibre d’acétylcholine, d'épinéphrine, de dopamine, d’acide gamma-aminobutyric et de sérotonine dans vos neurones miroirs.
-            Assurez votre succès auprès de vos collègues et amis en les comprenant vraiment.</p>
-        <ul class="leaf-component">
-            <li><img src="img/feuille01.png" alt="feuille"></li>
-            <li><img src="img/feuille02.png" alt="feuille"></li>
-            <li><img src="img/feuille03.png" alt="feuille"></li>
-            <li><img src="img/feuille04.png" alt="feuille"></li>
-            <li><img src="img/feuille05.png" alt="feuille"></li>
-            <li><img src="img/feuille06.png" alt="feuille"></li>
-            <li><img src="img/feuille07.png" alt="feuille"></li>
-        </ul>
-        <ul class="pils-component">
-            <li><img src="img/pils01.png" alt="pilule"></li>
-            <li><img src="img/pils02.png" alt="pilule"></li>
-            <li><img src="img/pils03.png" alt="pilule"></li>
-        </ul>
+        <h2>Pourquoi ?</h2>
+        <p>Les échanges numériques se multiplient au détriment des moments de vie.
+            Mais que reste-t-il des relations sociales directes ?
+            Comme dans un mutisme, ils doivent jour après jour faire face à leur solitude.</p>
     </div>
 
     <div class="counter">
         <a href="">01</a>
-        <a href="">02</a>
+        <a class="active" href="">02</a>
         <a href="">03</a>
-        <a class="active" href="">04</a>
+        <a href="">04</a>
         <a href="">05</a>
     </div>
 
