mise en place du loader sur la home

--- a/index.html
+++ b/index.html
@@ -6,7 +6,27 @@
     <link rel="stylesheet" href="css/global.css">
 </head>
 <body>
-
+        <!-- Loader -->
+        <div class="loader-pill">
+                <h2>Chargement en cours...</h2>
+                <div class="blobs">
+                    <div class=bg-left></div>
+                    <div class=bg-left></div>
+                    <div class="blob"></div>
+                    <div class="blob"></div>
+                    <div class="blob"></div>
+                    <div class="blob"></div>
+                    <div class="blob"></div>∑
+                    <div class="blob"></div>
+                    <div class="blob"></div>
+                    <div class="blob"></div>
+                    <div class="blob"></div>
+                    <div class="blob"></div>
+                    <div class="blob"></div>
+                </div>
+                <div class="shadow"></div>
+            </div>
+∑
 <div class="content">
 
     <a href="effects.html"><h1>empatia</h1></a>
@@ -17,6 +37,7 @@
 
 
 </div>
+<script src="scripts/loader.js"></script>
 
 </body>
 </html>
