--- a/index.html
+++ b/index.html
@@ -30,31 +30,32 @@
         </div>
     </div>
 
-    <div class="intro">
+    <div class="intro" id="intro">
 
         <a href="why.html"><h1>empatia</h1></a>
         <div class="">
             <h2>Au delà de vos écrans...</h2>
         </div>
+        <a href="#dystopie">Passer</a>
 
     </div>
 
-    <div class="dystopie">
+    <div class="dystopie" id="dystopie">
         <h4>Changez vos maux en mots</h4>
-        <h2>Pourquoi ?</h2>
-        <p>Les échanges numériques se multiplient au détriment des moments de vie.
+        <h2 id="dystopieH2">Pourquoi ?</h2>
+        <p id="dystopieP">Les échanges numériques se multiplient au détriment des moments de vie.
             Mais que reste-t-il des relations sociales directes ?
             Comme dans un mutisme, ils doivent jour après jour faire face à leur solitude.</p>
     </div>
 
-    <div class="effects">
+    <div class="effects" id="effects">
         <img src="img/bubbles.png" alt="">
         <h4>Aimez-vous en aimant les autres</h4>
         <h2>Les Effets</h2>
         <p>En prenant, chaque jour un traitement qui va décupler vos capacités empathiques. Votre corps sera plus réceptifs aux stimuli émotionnels et les interprétera plus facilement, ce qui vous rendra plus ouvert, plus conscient, plus fort.</p>
     </div>
 
-    <div class="components">
+    <div class="components" id="components">
         <h4>Changez vos maux en mots</h4>
         <h2>Composants</h2>
         <p>Mirorfeel vous aide  trouver le parfait équilibre d’acétylcholine, d'épinéphrine, de dopamine, d’acide gamma-aminobutyric et de sérotonine dans vos neurones miroirs.
@@ -75,7 +76,7 @@
         </ul>
     </div>
 
-    <div class="promise">
+    <div class="promise" id="promise">
         <img src="img/group-pills.png" alt="">
         <h4>Changez vos maux en mots</h4>
         <h2>On vous promets ...</h2>
@@ -89,11 +90,11 @@
     </div>
 
     <div class="counter">
-        <a class="active" href="">01</a>
-        <a href="">02</a>
-        <a href="">03</a>
-        <a href="">04</a>
-        <a href="">05</a>
+        <a class="active" href="#intro">01</a>
+        <a href="#dystopie">02</a>
+        <a href="#effects">03</a>
+        <a href="#components">04</a>
+        <a href="#promise">05</a>
     </div>
 
 </div>
@@ -144,6 +145,7 @@
         <p class="copyright">© 2013-2018 Graphic Resources S.L. All rights reserved.</p>
     </div>
 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="scripts/loader.js"></script>
 
 </body>
